{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 8,
  "lineage": "70077eea-9046-2d08-fd16-19b65f47dae8",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "datadog_server_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.6.1.2",
            "address_type": "INTERNAL",
            "creation_timestamp": "2021-04-03T05:38:07.324-07:00",
            "id": "projects/my-12345-project/regions/us-central1/addresses/name-datadog-server-address",
            "name": "name-datadog-server-address",
            "network_tier": "PREMIUM",
            "project": "my-12345-project",
            "purpose": "GCE_ENDPOINT",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/regions/us-central1/addresses/name-datadog-server-address",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/my-12345-project/regions/us-central1/subnetworks/name-vpc-subnet-public"
          },
          "dependencies": [
            "google_compute_network.vpc_net",
            "google_compute_subnetwork.vpc_subnet_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "external-firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-04-03T05:37:44.626-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/my-12345-project/global/firewalls/name-external-rule",
            "log_config": [],
            "name": "name-external-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/name-vpc",
            "priority": 1000,
            "project": "my-12345-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/firewalls/name-external-rule",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal-firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-04-03T05:37:44.345-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/my-12345-project/global/firewalls/name-internal-rule",
            "log_config": [],
            "name": "name-internal-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/name-vpc",
            "priority": 1000,
            "project": "my-12345-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/firewalls/name-internal-rule",
            "source_ranges": [
              "10.6.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "datadog_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20210401",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/my-12345-project/zones/us-central1-c/disks/name-datadog-server-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/my-12345-project/zones/us-central1-c/instances/name-datadog-server-instance",
            "instance_id": "2771960364051849043",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "redhawkby:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC/B+C0g+PPxgCuSxxc4V8jbOEoMwekeiWLgK2HUCRHYGnaOZASZ6kNHMNIZ2WfHJsO5ugUrN0YTGQsJujs/2Ehk/PT52FEEJ8lPQfuR5LoU+SQvs6Ki5AFTF3S5IOfocxG9x9mdwtxeRcJm9sJyINqGefjzdhRcO85h1F2w7tViZGl6gNI1W8dqsYRYL3XOsVFL/k6r6EWW8EHki7AoOBhqZyiiUCxV0npqP4bJUHHeaVWteoKmDor/51kTFBZkbL4u8XDM7PDC8bKOOL60TnD4dPNaSm1xQYQWpNUg6jRJ6HcUWIe9s/Yra3Lwa9Wo97aJMdnEk367la3UpszvyPyayX/nTkuFYy6wnRoxHLl0SKpsltB0DJy9Yyl0Y3uZ3fnB0LnvaPgNQ3H6DB5tbUHewCF2Z+4V9YTeGIpTku [...]
            },
            "metadata_fingerprint": "rVLWOZhIe9c=",
            "metadata_startup_script": "#!/bin/bash\n\n#---  turn off selinux and firewalld !important\nsudo systemctl stop firewalld\nsudo systemctl disable firewalld\n\nsudo setenforce 0\nsudo sed -i 's/enforcing/disabled/g' /etc/selinux/config\n\nsudo DD_AGENT_MAJOR_VERSION=7 DD_API_KEY=$API_KEY DD_SITE=\"datadoghq.com\" bash -c \"$(curl -L https://s3.amazonaws.com/dd-agent/scripts/install_script.sh)\"\n\n#--- enable logging in datadog agent\nsudo sed -i '/logs_enabled/a logs_enabled: true' / [...]
            "name": "name-datadog-server-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.67.127.86",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/name-vpc",
                "network_ip": "10.6.1.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/my-12345-project/regions/us-central1/subnetworks/name-vpc-subnet-public",
                "subnetwork_project": "my-12345-project"
              }
            ],
            "project": "my-12345-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/zones/us-central1-c/instances/name-datadog-server-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_address.datadog_server_address",
            "google_compute_network.vpc_net",
            "google_compute_subnetwork.vpc_subnet_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_net",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/my-12345-project/global/networks/name-vpc",
            "mtu": 0,
            "name": "name-vpc",
            "project": "my-12345-project",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/name-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-04-03T05:37:44.524-07:00",
            "gateway_address": "10.6.1.1",
            "id": "projects/my-12345-project/regions/us-central1/subnetworks/name-vpc-subnet-public",
            "ip_cidr_range": "10.6.1.0/24",
            "name": "name-vpc-subnet-public",
            "network": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/name-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "my-12345-project",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/regions/us-central1/subnetworks/name-vpc-subnet-public"
          },
          "dependencies": [
            "google_compute_network.vpc_net"
          ]
        }
      ]
    }
  ]
}